# sotex-power-grid-hackathon

./: .gitignore  README.md
nessie/.nessie/: meta.json
nessie/my_plugins/sotex/: README.md  aa.txt  pyproject.toml
nessie/my_plugins/sotex/src/sotex/: __init__.py  plugin.py
opendss/: Feeders33.dss  LV_Transformers.dss  Master.dss  Substations.dss  generate_1.py  generate_2.py
opendss/dss_output/: Feeders11.dss  Feeders33.dss  LV_Transformers.dss  LineCodes.dss  Master.dss  Substations.dss
qgis/: feeders11_lines.geojson  feeders33_lines.geojson  generate.py  sotex.qgz  substations.geojson  transmission_stations.geojson
qgis2web/: index.html
qgis2web/layers/: feeders11_lines_2.js  feeders33_lines_1.js  layers.js  substations_4.js  transmission_stations_3.js
qgis2web/resources/: qgis2web.js
qgis2web/styles/: distribution_substations_5_style.js  feeders11_lines_2_style.js  feeders33_lines_1_style.js  substations_4_style.js  transmission_stations_3_style.js
web-geojson/: export_grid.py  grid_viewer.html
web-js/: README.md  angular.json  package-lock.json  package.json
web-js/.angular/cache/21.2.7/power-grid-scada/: .tsbuildinfo
web-js/backend/: db.sql  package-lock.json  package.json  server.js
web-js/src/: index.html  styles.scss
web-js/src/app/: app.component.ts
web-js/src/app/models/: grid.models.ts
web-js/src/app/services/: data-retrieval.service.ts
web-py/: .env.example  database.py  main.py  power_grid_geo_scada_13k.html  power_grid_geo_scada_with_feeders.html  schemas.py  topology.py
web-raw/: power_grid_digital_twin_geo_scada.html
(+8 files in other folders)
