[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sotex"
version = "0.1.0"
description = "Datasource plugin for Nessie"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "nessie-api>=0.1.0",
    "aiohttp==3.13.3",
]

[project.entry-points."nessie_plugins"]
sotex = "sotex:sotex_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/sotex"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
